
add_subdirectory("smart_pointer")

# add_subdirectory("template")

# add_subdirectory("regex")

add_subdirectory("map_test")

add_subdirectory("function_test")

# add_subdirectory ("design_patterns")

add_subdirectory ("thread_pool")

# add_subdirectory("call_once")

add_subdirectory("lambda")

# add_subdirectory("thread")

# add_subdirectory("sync_callback")

add_subdirectory("sizeof")

# add_subdirectory("polymorphism")

# add_subdirectory("array")

# add_subdirectory("swap")

# add_subdirectory("async")

add_subdirectory("automatic_derivation")

add_subdirectory("initializer_list")

# add_subdirectory("using")

add_subdirectory("bind")

add_subdirectory("default_template_parameters")

add_subdirectory("for")

add_subdirectory("delegate_constructor")

add_subdirectory("inheritance_constructor")